objects/TASKRAY__trBaseline_Task__c.object
<CustomObject>
    <description>This is a TaskRay object used to store historical snapshot information on TaskRay Tasks.</description>
    <fields>
        <fullName>TASKRAY__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Deadline__c</fullName>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__List__c</fullName>
        <label>List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Holding</fullName>
                    <color>#DDDDDD</color>
                    <default>true</default>
                    <label>Holding</label>
                </value>
                <value>
                    <fullName>Prioritized</fullName>
                    <color>#CC6600</color>
                    <label>Prioritized</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                    <color>#3333FF</color>
                    <label>Started</label>
                </value>
                <value>
                    <fullName>Finished</fullName>
                    <color>#009900</color>
                    <label>Finished</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualBusinessDuration__c</fullName>
        <description>Used to track the number of business days that it actually took to complete the task. Calculated as the difference between the task Start Date and the task Actual Completion Date, excluding nonworking days.</description>
        <inlineHelpText>Number of business days that it took to complete the task.</inlineHelpText>
        <label>Actual Business Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualCompletionDate__c</fullName>
        <description>Date of when the task is completed. Works in conjunction with the Completed checkbox field.</description>
        <inlineHelpText>Date of when the task was completed.</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualDuration__c</fullName>
        <description>Used to track the number of days that it actually took to complete the task. Calculated as the difference between the task Start Date and the task Actual Completion Date, including nonworking days.</description>
        <inlineHelpText>Number of days that it took to complete the task (includes nonworking days).</inlineHelpText>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBaselineProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Baseline</label>
        <referenceTo>TASKRAY__trBaseline_Project__c</referenceTo>
        <relationshipLabel>TaskRay Task Baselines</relationshipLabel>
        <relationshipName>TaskRay_Task_Baselines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBaseline_Task_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Group Baseline</label>
        <referenceTo>TASKRAY__trBaseline_Task_Group__c</referenceTo>
        <relationshipLabel>TaskRay Task Baselines</relationshipLabel>
        <relationshipName>TaskRay_Task_Baselines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBusinessDuration__c</fullName>
        <description>Task duration excluding non-working days as defined by project’s Business Hours.</description>
        <label>Estimated Business Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletedAheadOfSchedule2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track whether the task was completed before its scheduled Estimated End Date.</description>
        <inlineHelpText>Indicates whether a task was completed before its scheduled Estimated End Date.</inlineHelpText>
        <label>Completed Ahead of Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletedBehindSchedule2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track whether the task was completed after its scheduled Estimated End Date.</description>
        <inlineHelpText>Indicates whether a task was completed after its scheduled Estimated End Date.</inlineHelpText>
        <label>Completed Behind Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDuration__c</fullName>
        <label>Estimated Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEndDateVariance__c</fullName>
        <formula>IF( 
OR( 
ISBLANK(TASKRAY__trTask__r.TASKRAY__Deadline__c), 
ISBLANK(TASKRAY__Deadline__c) 
), 
NULL, 
TASKRAY__trTask__r.TASKRAY__Deadline__c - TASKRAY__Deadline__c)</formula>
        <label>End Date Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedHours__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trIsMilestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trLongName__c</fullName>
        <formula>$Label.taskray__taskray_baselinetask_longname_prefix +&quot; &quot;+ TEXT(DATEVALUE(CreatedDate))+&quot;: &quot;+ TASKRAY__trTask__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Baseline Long Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNumberOfTimesBlocked__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to track the number of times the task was marked as blocked.</description>
        <inlineHelpText>Tracks the number of times the task was marked as blocked.</inlineHelpText>
        <label>Number of Times Blocked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStartDateVariance__c</fullName>
        <formula>IF( 
OR( 
ISBLANK(TASKRAY__trTask__r.TASKRAY__trStartDate__c), 
ISBLANK(TASKRAY__trStartDate__c) 
), 
NULL, 
TASKRAY__trTask__r.TASKRAY__trStartDate__c - TASKRAY__trStartDate__c)</formula>
        <label>Start Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTask__c</fullName>
        <label>Task</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Task Baselines</relationshipLabel>
        <relationshipName>TaskRay_Task_Baselines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTotalTimeOnTask__c</fullName>
        <label>Actual Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trWasTaskEverBlocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track whether a task was ever blocked.</description>
        <inlineHelpText>Indicates whether a task was ever blocked.</inlineHelpText>
        <label>Was Task Ever Blocked?</label>
        <type>Checkbox</type>
    </fields>
    <label>TaskRay Task Baseline</label>
    <nameField>
        <label>TaskRay Task Baseline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Task Baselines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>